kubeflow/apps/volumes-web-app/build/apps_v1_deployment_volumes-web-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    internal.kpt.dev/upstream-identifier: apps|Deployment|default|deployment
  labels:
    app: volumes-web-app
    kustomize.component: volumes-web-app
  name: volumes-web-app-deployment
  namespace: kubeflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: volumes-web-app
      kustomize.component: volumes-web-app
  template:
    metadata:
      labels:
        app: volumes-web-app
        kustomize.component: volumes-web-app
    spec:
      containers:
      - env:
        - name: USERID_HEADER
          valueFrom:
            configMapKeyRef:
              key: userid-header
              name: kubeflow-config
        - name: USERID_PREFIX
          valueFrom:
            configMapKeyRef:
              key: userid-prefix
              name: kubeflow-config
        - name: APP_PREFIX
          value: /volumes
        - name: APP_SECURE_COOKIES
          value: "true"
        - name: VOLUME_VIEWER_IMAGE
          value: filebrowser/filebrowser:v2.23.0
        image: docker.io/kubeflownotebookswg/volumes-web-app:v1.8.0
        name: volumes-web-app
        ports:
        - containerPort: 5000
        volumeMounts:
        - mountPath: /etc/config/viewer-spec.yaml
          name: viewer-spec
          subPath: viewer-spec.yaml
      serviceAccountName: volumes-web-app-service-account
      volumes:
      - configMap:
          name: volumes-web-app-viewer-spec-gm954c98h6
        name: viewer-spec
