kubeflow/apps/volumes-web-app/build/networking.istio.io_v1alpha3_destinationrule_volumes-web-app.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  annotations:
    internal.kpt.dev/upstream-identifier: networking.istio.io|DestinationRule|default|volumes-web-app
  labels:
    app: volumes-web-app
    kustomize.component: volumes-web-app
  name: volumes-web-app
  namespace: kubeflow
spec:
  host: volumes-web-app-service.kubeflow.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
