kubeflow/apps/volumes-web-app/build/security.istio.io_v1beta1_authorizationpolicy_volumes-web-app.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  annotations:
    internal.kpt.dev/upstream-identifier: security.istio.io|AuthorizationPolicy|default|volumes-web-app
  labels:
    app: volumes-web-app
    kustomize.component: volumes-web-app
  name: volumes-web-app
  namespace: kubeflow
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account
  selector:
    matchLabels:
      app: volumes-web-app
